--- a/cage_based/src/cagebased/static/index.html
+++ b/cage_based/src/cagebased/static/index.html
@@ -13,7 +13,7 @@
       <canvas id="textCanvas" width="1120" height="800">
         Your browser does not support HTML5 </canvas
       >
-      <img src="static/assets/images/croc.jpg" id="source" width="300" height="227" hidden />
+      <img src="static/assets/images/croc.png" id="source" width="300" height="227" hidden />
     </div>
     <br />
     <script type="module" src="./index.js"></script>
